--- a/pom.xml
+++ b/pom.xml
@@ -7,24 +7,30 @@
     <artifactId>meta-gk</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
+    <parent>
+        <artifactId>meta-columnar</artifactId>
+        <groupId>columnar</groupId>
+        <version>1.0.1-SNAPSHOT</version>
+    </parent>
     <modules>
         <module>gk-locator</module>
         <module>gk-ipfs</module>
         <module>gk-libs</module>
         <module>gk-bytecursive</module>
     </modules>
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
-        <kotlin.version>1.6.0-M1</kotlin.version>
-    </properties>
+    <!--    <properties>-->
+    <!--        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>-->
+    <!--        <maven.compiler.source>1.8</maven.compiler.source>-->
+    <!--        <maven.compiler.target>1.8</maven.compiler.target>-->
+    <!--        <kotlin.version>1.6.0-M1</kotlin.version>-->
+    <!--    </properties>-->
     <dependencies>
         <dependency>
             <groupId>columnar</groupId>
             <artifactId>lillypads</artifactId>
             <version>1.0.1-SNAPSHOT</version>
         </dependency>
+        <!--
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-stdlib-jdk8</artifactId>
@@ -35,35 +41,35 @@
             <artifactId>kotlin-test</artifactId>
             <version>${kotlin.version}</version>
             <scope>test</scope>
-        </dependency>
+        </dependency>-->
     </dependencies>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.jetbrains.kotlin</groupId>
-                <artifactId>kotlin-maven-plugin</artifactId>
-                <version>${kotlin.version}</version>
-                <executions>
-                    <execution>
-                        <id>compile</id>
-                        <phase>compile</phase>
-                        <goals>
-                            <goal>compile</goal>
-                        </goals>
-                    </execution>
-                    <execution>
-                        <id>test-compile</id>
-                        <phase>test-compile</phase>
-                        <goals>
-                            <goal>test-compile</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <jvmTarget>11</jvmTarget>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
+    <!--
+        <build>
+            <plugins>
+                <plugin>
+                    <groupId>org.jetbrains.kotlin</groupId>
+                    <artifactId>kotlin-maven-plugin</artifactId>
+                    <version>${kotlin.version}</version>
+                    <executions>
+                        <execution>
+                            <id>compile</id>
+                            <phase>compile</phase>
+                            <goals>
+                                <goal>compile</goal>
+                            </goals>
+                        </execution>
+                        <execution>
+                            <id>test-compile</id>
+                            <phase>test-compile</phase>
+                            <goals>
+                                <goal>test-compile</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                    <configuration>
+                        <jvmTarget>11</jvmTarget>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </build>-->
 </project>
