--- a/gk-locator/pom.xml
+++ b/gk-locator/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
@@ -13,13 +13,13 @@
     <groupId>gossip</groupId>
     <artifactId>gk-locator</artifactId>
     <version>1.0-SNAPSHOT</version>
-<description>
-    intent:
-    define gossip mesh exemplars
-    * defaults for localnetwork, ports, and bootstrap configs
-    * rest client api
-    * provide ghetto-redis and isam for all the things
-    * java names, java executors over coroutines, kotlin FP
-</description>
-    
+    <description>
+        intent:
+        define gossip mesh exemplars
+        * defaults for localnetwork, ports, and bootstrap configs
+        * rest client api
+        * provide ghetto-redis and isam for all the things
+        * java names, java executors over coroutines, kotlin FP
+    </description>
+
 </project>
