--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,8 @@
     <packaging>pom</packaging>
     <parent>
         <artifactId>meta-columnar</artifactId>
-        <groupId>columnar</groupId>
-        <version>1.0.1-SNAPSHOT</version>
+        <groupId>com.vsiwest.columnar</groupId>
+        <version>1.0.2-SNAPSHOT</version>
     </parent>
     <modules>
         <module>gk-locator</module>
@@ -18,64 +18,14 @@
         <module>gk-libs</module>
         <module>gk-bytecursive</module>
     </modules>
-    <!--    <properties>-->
-    <!--        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>-->
-    <!--        <maven.compiler.source>1.8</maven.compiler.source>-->
-    <!--        <maven.compiler.target>1.8</maven.compiler.target>-->
-    <!--        <kotlin.version>1.6.0-M1</kotlin.version>-->
-    <!--    </properties>-->
+
     <dependencies>
         <dependency>
-            <groupId>columnar</groupId>
+            <groupId>com.vsiwest.columnar</groupId>
             <artifactId>lillypads</artifactId>
-            <version>1.0.1-SNAPSHOT</version>
+            <version>1.0.2-SNAPSHOT</version>
         </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.13.2</version>
-            <scope>test</scope>
-        </dependency>
-        <!--
-        <dependency>
-            <groupId>org.jetbrains.kotlin</groupId>
-            <artifactId>kotlin-stdlib-jdk8</artifactId>
-            <version>${kotlin.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.jetbrains.kotlin</groupId>
-            <artifactId>kotlin-test</artifactId>
-            <version>${kotlin.version}</version>
-            <scope>test</scope>
-        </dependency>-->
+
     </dependencies>
-    <!--
-        <build>
-            <plugins>
-                <plugin>
-                    <groupId>org.jetbrains.kotlin</groupId>
-                    <artifactId>kotlin-maven-plugin</artifactId>
-                    <version>${kotlin.version}</version>
-                    <executions>
-                        <execution>
-                            <id>compile</id>
-                            <phase>compile</phase>
-                            <goals>
-                                <goal>compile</goal>
-                            </goals>
-                        </execution>
-                        <execution>
-                            <id>test-compile</id>
-                            <phase>test-compile</phase>
-                            <goals>
-                                <goal>test-compile</goal>
-                            </goals>
-                        </execution>
-                    </executions>
-                    <configuration>
-                        <jvmTarget>11</jvmTarget>
-                    </configuration>
-                </plugin>
-            </plugins>
-        </build>-->
+
 </project>
