--- a/gk-bytecursive/pom.xml
+++ b/gk-bytecursive/pom.xml
@@ -5,13 +5,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>gossip</groupId>
+        <groupId>com.vsiwest.gossip</groupId>
         <artifactId>meta-gk</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0.2-SNAPSHOT</version>
     </parent>
 
     <artifactId>gk-bytecursive</artifactId>
-    <version>1.0-SNAPSHOT</version>
 
     <description>
         something that might exceed the scope of gk-lib is a cursive/dsel for bytebuffers, under review.
