--- a/gk-libs/pom.xml
+++ b/gk-libs/pom.xml
@@ -5,14 +5,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>gossip</groupId>
+        <groupId>com.vsiwest.gossip</groupId>
         <artifactId>meta-gk</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0.2-SNAPSHOT</version>
     </parent>
 
-    <groupId>gossip</groupId>
     <artifactId>gk-libs</artifactId>
-    <version>1.0-SNAPSHOT</version>
 
     <description>
         intent:
