--- a/gk-router/pom.xml
+++ b/gk-router/pom.xml
@@ -3,16 +3,21 @@
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <dependencies>
+        <dependency>
+            <groupId>com.vsiwest.gossip</groupId>
+            <artifactId>gk-libs</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
+    </dependencies>
 
     <parent>
-        <groupId>gossip</groupId>
+        <groupId>com.vsiwest.gossip</groupId>
         <artifactId>meta-gk</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0.2-SNAPSHOT</version>
     </parent>
 
-    <groupId>gossip</groupId>
-    <artifactId>gk-locator</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>gk-router</artifactId>
     <description>
         intent:
         define gossip mesh exemplars
